--- a/TimeTrackManager/src/main/resources/templates/ContactInputForm.html
+++ b/TimeTrackManager/src/main/resources/templates/ContactInputForm.html
@@ -23,3 +23,13 @@
 <p th:text="${index}">
 </body>
 </html>
+
+
+<div>
+    <label for="i_furigana">住所</label>
+    <input id="i_furigana" type="text" name="furigana" value="" placeholder="大阪府大阪市中央区1-1-1">
+</div>
+<div>
+    <label for="i_tel">電話番号</label>
+    <input id="i_tel" type="tel" name="tel" value="" inputmode="tel" placeholder="080-1234-5678">
+</div>
