ログイン機能を追加

--- a/TimeTrackManager/src/main/resources/templates/login.html
+++ b/TimeTrackManager/src/main/resources/templates/login.html
@@ -8,12 +8,11 @@
 <body>
 <div class="login-page">
     <div class="form">
+        <p th:text="${index}">
         <h2>Login</h2>
-        <form class="login-form">
-            <input type="text" placeholder="username"/>
-            <input type="password" placeholder="password"/>
-        </form>
-        <form th:action="@{/AttendanceInputForm}" method="post">
+        <form  th:action="@{/AttendanceInputForm}" method="post" class="login-form">
+            <input type="text" name="username" placeholder="username"/>
+            <input type="password" name="password" placeholder="password"/>
             <button type="submit">Login</button>
         </form>
     </div>
