--- a/TimeTrackManager/src/main/resources/templates/AttendanceStatusListView.html
+++ b/TimeTrackManager/src/main/resources/templates/AttendanceStatusListView.html
@@ -2,10 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>勤怠入力画面</title>
+  <link th:href="@{/style/cssandjs/AttendanceStatusListForm.css]"rel="stylesheet">
+  <title>勤怠状況一覧画面</title>
 </head>
 <body>
-<ul>
+<ul id="menu">
   <form th:action="@{/AttendanceInputForm}" method="post">
     <li><button type="submit">勤怠入力</button></li>
   </form>
@@ -16,10 +17,15 @@
     <li><button type="submit">連絡先登録</button></li>
   </form>
   <form th:action="@{/AttendanceStatusListView}" method="post">
-    <li><button type="submit">勤怠状況一覧表示</button></li>
+    <li><button type="submit">勤怠状況一覧</button></li>
   </form>
 
 </ul>
-<p th:text="${index}">
+<h2>勤怠状況一覧</h2>
+<table border="1" style="border-collapse:collapse">
+  <tr><th>氏名</th><th>勤務開始時間</th><th>勤務終了時間</th><th>ステータス</th><th>勤務場所</th></tr>
+  <tr><th>名無し1</th><th>9:00</th><th>18:00</th><th>出勤中</th><th>自宅</th></tr>
+  <tr><th>名無し2</th><th>9:00</th><th>15:00</th><th>未出勤</th><th>---</th></tr>
+</table>
 </body>
 </html>
