--- a/TimeTrackManager/src/main/resources/templates/LocationInputForm.html
+++ b/TimeTrackManager/src/main/resources/templates/LocationInputForm.html
@@ -2,10 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>勤怠入力画面</title>
+    <link th:href="@{/style/cssandjs/LocationInputForm.css}"rel="stylesheet">
+    <title>勤務場所登録画面</title>
 </head>
 <body>
-<ul>
+<ul id="menu">
     <form th:action="@{/AttendanceInputForm}" method="post">
         <li><button type="submit">勤怠入力</button></li>
     </form>
@@ -20,6 +21,17 @@
     </form>
 
 </ul>
-<p th:text="${index}">
+<div>
+    <h2>勤務場所登録画面</h2>
+    <p>本日の勤務場所を登録してください</p>
+    <select name="place">
+        <option value="">-選択してください-</option>
+        <option value="home">自宅</option>
+        <option value="office">会社</option>
+    </select>
+    <form th:action="@{/AttendanceInputForm}" method="post">
+        <button type="submit">登録</button>
+    </form>
+</div>
 </body>
 </html>
