画面遷移時にエラーが表示される不具合を修正

--- a/TimeTrackManager/src/main/resources/templates/AttendanceInputForm.html
+++ b/TimeTrackManager/src/main/resources/templates/AttendanceInputForm.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <ul id="menu">
-  <form th:action="@{/AttendanceInputForm}" method="post">
+  <form th:action="@{/AttendanceInputFormNoParam}" method="post">
     <li><button type="submit">勤怠入力</button></li>
   </form>
   <form th:action="@{/LocationInputForm}" method="post">
