--- a/TimeTrackManager/src/main/resources/templates/AttendanceStatusListView.html
+++ b/TimeTrackManager/src/main/resources/templates/AttendanceStatusListView.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <link th:href="@{/style/cssandjs/AttendanceStatusListForm.css]"rel="stylesheet">
+  <link th:href="@{/style/cssandjs/AttendanceStatusListView.css}"rel="stylesheet">
   <title>勤怠状況一覧画面</title>
 </head>
 <body>
