--- a/TimeTrackManager/src/main/resources/templates/AttendanceInputForm.html
+++ b/TimeTrackManager/src/main/resources/templates/AttendanceInputForm.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="UTF-8">
-  <link th:href="@{/style/cssandjs/AttendanceInputForm.css}"rel="stylesheet">
+  <link th:href="@{/style/cssandjs/AttendanceInputForm.css}" rel="stylesheet">
+  <script type="text/javascript" th:src="@{/style/cssandjs/AttendanceInputForm.js}"></script>
   <title>勤怠入力画面</title>
 </head>
 <body>
@@ -22,6 +23,8 @@
 </ul>
 <p th:text="${index}"><br>
 <p th:text="${start}">
+<p id="currentTime"></p>
+<p th:text="${name}">
 <form th:action="@{/startWork}" method="post">
   <button type="submit">出勤</button>
 </form>
