--- a/TimeTrackManager/src/main/resources/static/style/cssandjs/ContactInputForm.css
+++ b/TimeTrackManager/src/main/resources/static/style/cssandjs/ContactInputForm.css
@@ -1,6 +1,23 @@
-#menu{
-list-style: none;
-display: flex;
+nav{
+    width: 100%;
+    height: 70px;
+    background-color: #696969;
+    padding-top: 5px;
+    box-sizing: border-box;
+    position: fixed;
+    margin: 0 0 0 auto;
+}
+.menu{
+    list-style: none;
+    display: flex;
+}
+.menu-b{
+    border: none;
+    width: 200px;
+    padding:10px;
+    color: #ffff;
+    background-color:#696969;
+
 }
 
 
