--- a/TimeTrackManager/src/main/resources/static/style/cssandjs/LocationInputForm.css
+++ b/TimeTrackManager/src/main/resources/static/style/cssandjs/LocationInputForm.css
@@ -1,4 +1,33 @@
-#menu{
-list-style: none;
-display: flex;
+nav{
+    width: 100%;
+    height: 70px;
+    background-color: #696969;
+    padding-top: 5px;
+    box-sizing: border-box;
+    position: fixed;
+    margin: 0 0 0 auto;
+}
+.menu{
+    list-style: none;
+    display: flex;
+}
+.menu-b{
+    border: none;
+    width: 200px;
+    padding:10px;
+    color: #ffff;
+    background-color: #696969;
+}
+.form{
+    position: relative;
+    text-align: center;
+    margin: 0;
+    padding: 100px;
+}
+.register{
+    width: 100px;
+    padding: 20px;
+    text-align: center;
+    background-color:chartreuse;
+    border:none;
 }
