--- a/TimeTrackManager/src/main/resources/templates/ContactInputForm.html
+++ b/TimeTrackManager/src/main/resources/templates/ContactInputForm.html
@@ -20,6 +20,9 @@
     <form th:action="@{/AttendanceStatusListView}" method="post">
         <li><button type="submit"class="menu-b">勤怠状況一覧表示</button></li>
     </form>
+    <form th:action="@{/logout}" method="post">
+        <button type="submit" class="menu-b">ログアウト</button>
+    </form>
 </ul>
 </nav>
 <div class="form">
