--- a/TimeTrackManager/src/main/resources/static/style/cssandjs/AttendanceInputForm.css
+++ b/TimeTrackManager/src/main/resources/static/style/cssandjs/AttendanceInputForm.css
@@ -1,9 +1,49 @@
-#menu{
-list-style: none;
-display: flex;
+nav{
+    width: 100%;
+    height: 70px;
+    background-color: #696969;
+    padding-top: 5px;
+    box-sizing: border-box;
+    position: fixed;
+    margin: 0 0 0 auto;
 }
+.menu{
+    list-style: none;
+    display: flex;
+}
+.menu-b{
+    border: none;
+    width: 200px;
+    padding:10px;
+    color: #ffff;
+    background-color:#696969;
 
-button{
-width:200px;
-padding:20px;
+}
+.form{
+    position: relative;
+    text-align: center;
+    margin: 0;
+    padding: 100px;
+}.button-form input:first-of-type{
+    margin-right: 50px;
+}
+.button-form{
+    display: flex;
+    justify-content: space-evenly;
+}
+.start-b{
+    width: 100px;
+    padding: 30px;
+    background-color: forestgreen;
+    margin: auto;
+    color: #ffff;
+    border: none;
+}
+.end-b{
+    width: 100px;
+    padding: 30px;
+    background-color:red;
+    margin: auto;
+    color: #ffff;
+    border: none;
 }
