--- a/TimeTrackManager/src/main/resources/templates/logout.html
+++ b/TimeTrackManager/src/main/resources/templates/logout.html
@@ -7,6 +7,7 @@
 <body>
 <p>ログアウトしました</p>
 <form th:action="@{/login}" method="get">
+  <a href="" class="btn_06">Button</a>
   <button type="submit">ログインページへ</button>
 </form>
 
