--- a/TimeTrackManager/src/main/resources/templates/logout.html
+++ b/TimeTrackManager/src/main/resources/templates/logout.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <link th:href="@{/style/cssandjs/Logout.css}" rel="stylesheet"/>
+  <link th:href="@{/style/cssandjs/CSS/Logout.css}" rel="stylesheet"/>
   <title>ログアウト</title>
 </head>
 <body>
