--- a/TimeTrackManager/src/main/resources/templates/login.html
+++ b/TimeTrackManager/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link th:href="@{/style/cssandjs/Login.css}" rel="stylesheet"/>
+    <link th:href="@{/style/cssandjs/CSS/Login.css}" rel="stylesheet"/>
     <title>ログインページ</title>
 </head>
 <body>
