--- a/TimeTrackManager/src/main/resources/static/style/cssandjs/CSS/LocationInputForm.css
+++ b/TimeTrackManager/src/main/resources/static/style/cssandjs/CSS/LocationInputForm.css
@@ -27,6 +27,7 @@ nav{
     width: 100px;
     padding: 20px;
     text-align: center;
-    background-color:chartreuse;
+    background-color:forestgreen;
     border:none;
+    border-radius: 10px;
 }
