メッセージの表示方法などを変更

--- a/TimeTrackManager/src/main/resources/static/style/cssandjs/CSS/ContactInputForm.css
+++ b/TimeTrackManager/src/main/resources/static/style/cssandjs/CSS/ContactInputForm.css
@@ -26,6 +26,7 @@ nav{
 .register{
     width: 100px;
     padding: 20px;
+    color: white;
     text-align: center;
     background-color:forestgreen;
     border:none;
