--- a/TimeTrackManager/src/main/resources/static/style/cssandjs/CSS/LocationInputForm.css
+++ b/TimeTrackManager/src/main/resources/static/style/cssandjs/CSS/LocationInputForm.css
@@ -25,6 +25,7 @@ nav{
 }
 .register{
     width: 100px;
+    color: white;
     padding: 20px;
     text-align: center;
     background-color:forestgreen;
