--- a/TimeTrackManager/src/main/resources/templates/LocationInputForm.html
+++ b/TimeTrackManager/src/main/resources/templates/LocationInputForm.html
@@ -18,7 +18,7 @@
         <li><button type="submit"class="menu-b">連絡先登録</button></li>
     </form>
     <form th:action="@{/AttendanceStatusListView}" method="post">
-        <li><button type="submit"class="menu-b">勤怠状況一覧表示</button></li>
+        <li><button type="submit"class="menu-b">勤怠状況一覧</button></li>
     </form>
     <form th:action="@{/logout}" method="post" onclick="return logoutAnnounce()">
         <button type="submit" class="menu-b">ログアウト</button>
