--- a/TimeTrackManager/src/main/resources/templates/AttendanceInputForm.html
+++ b/TimeTrackManager/src/main/resources/templates/AttendanceInputForm.html
@@ -26,6 +26,7 @@
   </ul>
 </nav>
 <div class="form">
+  <p th:text="${status}">
   <p th:text="${index}">
   <p th:text="${start}">
   <p id="monthAndDayTime"></p>
