一覧表示の際に、同じ部署のみを表示するように変更

--- a/TimeTrackManager/src/main/resources/templates/AttendanceInputForm.html
+++ b/TimeTrackManager/src/main/resources/templates/AttendanceInputForm.html
@@ -48,12 +48,12 @@
     <tr>
       <td>
         <form th:action="@{/startBreak}" method="post">
-          <button type="submit" class="pause">休憩開始</button>
+          <button type="submit" class="pause" onclick="return breakStartAnnounce()">休憩開始</button>
         </form>
       </td>
       <td>
         <form th:action="@{/endBreak}" method="post">
-          <button type="submit" class="pause">休憩終了</button>
+          <button type="submit" class="pause" onclick="return breakEndAnnounce()">休憩終了</button>
         </form>
       </td>
     </tr>
